syntax = "proto3";

message LoomBenchWriteTx {
    bytes Key = 1;
    bytes Val = 2;
}

message LoomBenchReadTx {
    bytes Key = 1;
}

message LoomBenchResp {
    bytes Val = 1;
}



